# jarvis-v2

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUTH_AND_CONNECTIONS.md  CLAUDE.md  JARVIS_V2_BUILD_RULES.md  JARVIS_V2_BUILD_SEQUENCE.md  JARVIS_V2_LOCKED_CHARTER.md  LICENSE  MANIFEST.md  MEMORY.md  MODEL_STRATEGY.md  OPENCLAW_REVIEW.md  README.md  STANDING_ORDERS.en.md  STANDING_ORDERS.md  TASKS_FOR_CLAUDE.md  TASK_aesthetic_feedback_loop.md  TASK_daemon_fix.md  TASK_web_cache.md  USER.md  WORKSPACE_MODEL.md  commands.txt  index.html  pyproject.toml  requirements.txt  spec-file.txt  srvlab-proposal.html  test.txt
.codex/: config.toml
SPECS/: danish-to-english-migration.md
apps/central_cli/: README.md  pyproject.toml
apps/central_cli/central_cli/: client.py  commands.py  config.py  datasource.py  feed.py  hud.py  hud_actions.py  hud_populate.py  hud_theme.py  main.py  renderer.py  script_runner.py  tui.py
apps/central_cli/central_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/central_cli/central_cli/engine/: rowdiff.py  state.py  workers.py
apps/central_cli/central_cli/frame/: app.py  detail_screen.py  palette.py  table_view.py
apps/central_cli/central_cli/views/: incidents.py  nerves.py  overview.py
apps/central_cli/tests/: test_client.py  test_commands.py  test_config.py  test_datasource.py  test_datasource_a57.py  test_datasource_a6.py  test_datasource_a8.py  test_datasource_affect.py  test_datasource_agents_balancer.py  test_datasource_costs.py  test_datasource_dark_products.py  test_datasource_extra.py  test_datasource_remaining.py  test_datasource_soul.py  test_datasource_tone.py  test_feed.py  test_hud_a234.py  test_hud_a57.py  test_hud_a6.py  test_hud_a8.py  test_hud_actions_agents_balancer.py  test_hud_balancer_tab.py  test_hud_commands.py  test_hud_dark_products.py  test_hud_overview_cost.py  test_hud_self_agents.py  test_hud_smoke.py  test_hud_soul.py  test_hud_tabs10.py  test_hud_views.py  test_hud_writes.py  test_main_script.py  test_renderer.py  test_script_runner.py  test_tui_smoke.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  BACKEND_OVERVIEW.md  BRUGERVEJLEDNING.md  CAPABILITIES.md  CENTRAL.md  CHANGELOG.md  CHANNELS.md  CLAUDE_NOTES_WINDOWS_BUILD.md  CLAUDE_NOTES_WINDOWS_BUILD_v2.md  CLI_PLAN.md  CLI_SPEC.md  CODING_RULES.md  CONSCIOUSNESS_ROADMAP.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT.md  DOCS_AUDIT_2026-04-21.md  DOCS_MANIFEST.json  DOCS_MANIFEST.md  EVENTBUS.md  INDEX.md  INSTALL.md  JARVISX_REDESIGN_SPEC.md  JARVIS_MANIFESTO.md  JARVIS_V2_BUILD_RULES.md  JARVIS_V2_BUILD_SEQUENCE.md  JARVIS_V2_LOCKED_CHARTER.md  MISSION_CONTROL.md  MODEL_STRATEGY.md  PHASE_1_TODO.md  PREDECESSOR_BROADER_AUDIT_2026-04-22.md  PREDECESSOR_COGNITION_AUDIT_2026-04-22.md  README.md  ROADMAP_10_LAYERS.md  SECURITY.md  TASK_daemon_fix_DIAGNOSIS_2026-04-21.md  TRANSPORTS.md  UI_ROADMAP.md  (+26 more)
scripts/: api_docs_gen.py  api_reference_gen.py  bench_ollama_concurrency.py  block_jvs_keys.sh  cache_rate_monitor.py  capabilities_gen.py  capability_audit.py  central_connectivity_audit.py  db_decomposition_map.py  db_path_fixture_audit.py  db_split_baseline.py  docs_audit.py  docs_drift_check.py  enforce_commit_hygiene.py  enforce_test_coverage.py  gen_tool_registry.cjs  god_file_map.py  honesty_metrics.py  identity_formation_monitor.py  injection_richness_check.py  interlanguage_binary_jarvis_vs_ollama.py  interlanguage_classifier_final.py  interlanguage_classifier_interim.py  interlanguage_drift_classifier.py  interlanguage_structural_classifier.py  jarvis-api-workers.service  jarvis-api.service  jarvis-runtime.service  jarvis.py  jarvis_bare_practice_runner.py  link_google_email.py  measure_prompt_payload.py  meta_evne_healthcheck.py  migrate_emotional_memory.py  mint_jarvisx_token.py  peer_models.py  (+17 more)
(+3881 files in other folders)
