[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-v2"
version = "0.1.0"
description = "Jarvis V2 runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "ollamafreeapi>=0.1.4",
  "bcrypt>=5.0",
  "pypdf>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*"]

[tool.pytest.ini_options]
# importlib-mode: behandl test-filer med SAMME basename i forskellige mapper
# (fx tests/test_tool_catalog.py + tests/services/test_tool_catalog.py) som
# DISTINKTE moduler. Default 'prepend'-mode indsætter test-mappen i sys.path og
# importerer pr. basename → "import file mismatch" → hele suiten afbrydes ved
# collection (5 kollisioner pr. 2026-06-30). importlib er den anbefalede mode og
# kræver ingen __init__.py i tests/. Ingen sibling-bare-name-imports i suiten.
# --timeout=45 --timeout-method=signal (6. jul): INTET per-test-deadline før nu → ét
# blokerende kald (subprocess/socket/sleep uden timeout) hang HELE suiten for evigt =
# nul signal. signal-metoden afbryder den skyldige test og FORTSÆTTER → hver hænger
# fejler individuelt i stedet for at fryse alt. Gør suiten færdig-kørbar = forudsætning
# for troværdig baseline (db.py-refaktor-net).
addopts = "--import-mode=importlib --timeout=45 --timeout-method=signal -m 'not integration'"
markers = [
    "dirty_state: test muterer delt tilstand; isolér ved behov",
    "integration: kræver kørende infra (container/DB/net/subprocess); ekskl. fra default unit-kørsel",
    "real_db: test skal bevidst ramme den ægte ~/.jarvis-v2-DB (opt-out af _guard_prod_db_path)",
]
