[project]
name = "central-cli"
version = "0.1.0"
description = "Central CLI — live realtids-adgang til Den Intelligente Central"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "textual>=0.60", "rich>=13.0"]

[project.scripts]
central = "central_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["central_cli*"]
